--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-__pychache__/
+__pychache__
 test.py
 test_txt.txt
-Calculations/__pychache__/
-Functions/__pychache__/
+Calculations/__pychache__
+Functions/__pychache__
