Made a lot of changes. deleted stuff and added a lot of stuff. General cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-<<<<<<< HEAD
 __pychache__
 __pycache__
 test.py
 test_txt.txt
-Calculations/__pychache__
-Functions/__pychache__
-=======
+Calculations/__pycache__
+Functions/__pycache__
+PDF_export/__pycache__
 testing.py
 defenition.txt
->>>>>>> 25d73f3 (inital commit)
